<resources>
    <string name="app_name">AndroidDevelope</string>
    <string name="str_loading">正在加载中</string>
    <string name="title_activity_do_sth">DoSthActivity</string>
    <string name="title_activity_load">weico</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noboringactionbar_title">Beautiful picture</string>
    <string name="loreum">Quam ob rem vita quidem talis fuit vel fortuna vel gloria, ut nihil posset accedere, moriendi autem sensum celeritas abstulit; quo de genere mortis difficile dictu est; quid homines suspicentur, videtis; hoc vere tamen licet dicere, P. Scipioni ex multis diebus, quos in vita celeberrimos laetissimosque viderit, illum diem clarissimum fuisse, cum senatu dimisso domum reductus ad vesperum est a patribus conscriptis, populo Romano, sociis et Latinis, pridie quam excessit e vita, ut ex tam alto dignitatis gradu ad superos videatur deos potius quam ad inferos pervenisse.  Quam ob rem id primum videamus, si placet, quatenus amor in amicitia progredi debeat. Numne, si Coriolanus habuit amicos, ferre contra patriam arma illi cum Coriolano debuerunt? num Vecellinum amici regnum adpetentem, num Maelium debuerunt iuvare?  Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, itineribus interiectis permutatione iumentorum emensis venit Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes, qui sub eo domesticis praefuit, cum Apodemio agente in rebus milites ducens, quos beneficiis suis oppigneratos elegerat imperator certus nec praemiis nec miseratione ulla posse deflecti.  Utque aegrum corpus quassari etiam levibus solet offensis, ita animus eius angustus et tener, quicquid increpuisset, ad salutis suae dispendium existimans factum aut cogitatum, insontium caedibus fecit victoriam luctuosam.  Nunc vero inanes flatus quorundam vile esse quicquid extra urbis pomerium nascitur aestimant praeter orbos et caelibes, nec credi potest qua obsequiorum diversitate coluntur homines sine liberis Romae.</string>


    <string name="action_settings">Settings</string>
    <string name="test">测试</string>
    <string name="title_health_info">健康资讯</string>
    <string name="title_home_page">首页</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="action_edit">编辑</string>
    <string name="action_zan">点赞</string>
    <string name="action_share">分享</string>
    <string name="hello_world">hell world</string>
    <string name="txt_place">…</string>
    <string name="weibo">微博</string>
    <string name="pic">美图欣赏</string>
    <string name="title_tngou">美图欣赏</string>
    <string name="title_zhihu">知乎日报</string>
    <string name="add_pic">移动网络下加载图片</string>
    <string name="card_title">测试Card的title应该是很长的文本</string>
    <string name="prompt_username">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="null_info">输入信息不完整</string>
    <string name="login_success">登录成功</string>


    //图片的后缀 则同一个图片key 得到不同的结果
    <string name="image_suffix_general">_fw320sf</string>//普通浏览的图
    <string name="image_suffix_big">_fw658</string>//大图
    <string name="image_suffix_small">_sq75sf</string>//小图
    <string name="url_image_general">http://img.hb.aicdn.com/%s_fw320sf</string>
    <string name="url_image_big">http://img.hb.aicdn.com/%s_fw658</string>
    <string name="url_image_small">http://img.hb.aicdn.com/%s_sq75sf</string>
    <string name="text_fans_attention">%1$d粉丝 %2$d关注</string>

    <string name="title_fragment_board">画板</string>
    <string name="title_fragment_gather">采集</string>
    <string name="title_fragment_like">喜欢</string>

</resources>
